--- a/index.html
+++ b/index.html
@@ -111,52 +111,65 @@
     </div>
   </section>
 
-  <!-- Portfolio (with mockup) -->
-  <section id="portfolio" class="py-12 bg-slate-50">
-    <div class="max-w-6xl mx-auto px-4 sm:px-6 text-center">
-      <h2 class="text-2xl font-bold mb-2">Portofolio Kami</h2>
-      <p class="text-slate-600 text-sm sm:text-base mb-6">Beberapa contoh situs web klien lokal dari berbagai bidang.</p>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+<!-- Portfolio (diperbaiki agar semua gambar tampil) -->
+<section id="portfolio" class="py-12 bg-slate-50">
+  <div class="max-w-6xl mx-auto px-4 sm:px-6 text-center">
+    <h2 class="text-2xl font-bold mb-2">Portofolio Kami</h2>
+    <p class="text-slate-600 text-sm sm:text-base mb-6">Beberapa contoh situs web klien lokal dari berbagai bidang.</p>
 
-        <!-- Toko Kopi -->
-        <article class="bg-white rounded-lg shadow overflow-hidden p-4">
-          <div class="mockup-screen mb-3">
-            <div class="mockup-header"><span style="background:#ef4444"></span><span style="background:#facc15"></span><span style="background:#22c55e"></span></div>
-            <div class="mockup-body">
-              <img src="https://images.unsplash.com/photo-1511920170033-f8396924c348?q=80&w=800&auto=format&fit=crop" alt="Website Toko Kopi">
-            </div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+
+      <!-- Toko Kopi -->
+      <article class="bg-white rounded-lg shadow overflow-hidden p-4">
+        <div class="mockup-screen mb-3">
+          <div class="mockup-header">
+            <span style="background:#ef4444"></span>
+            <span style="background:#facc15"></span>
+            <span style="background:#22c55e"></span>
           </div>
-          <h4 class="font-semibold text-lg">Toko Kopi Pare</h4>
-          <p class="text-sm text-slate-500 mt-2">Landing page menampilkan foto produk, menu kopi, dan peta lokasi interaktif.</p>
-        </article>
-
-        <!-- Klinik -->
-        <article class="bg-white rounded-lg shadow overflow-hidden p-4">
-          <div class="mockup-screen mb-3">
-            <div class="mockup-header"><span style="background:#ef4444"></span><span style="background:#facc15"></span><span style="background:#22c55e"></span></div>
-            <div class="mockup-body">
-              <img src="https://images.unsplash.com/photo-1580281657521-4a1d3b0ee5f5?q=80&w=800&auto=format&fit=crop" alt="Website Klinik Sehat">
-            </div>
+          <div class="mockup-body">
+            <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?q=80&w=800&auto=format&fit=crop" alt="Website Toko Kopi Pare">
           </div>
-          <h4 class="font-semibold text-lg">Klinik Sehat</h4>
-          <p class="text-sm text-slate-500 mt-2">Website profesional untuk dokter & klinik, berisi jadwal praktek dan form konsultasi.</p>
-        </article>
+        </div>
+        <h4 class="font-semibold text-lg">Toko Kopi Pare</h4>
+        <p class="text-sm text-slate-500 mt-2">Landing page menampilkan menu kopi, lokasi interaktif, dan galeri produk.</p>
+      </article>
 
-        <!-- Kantor Hukum -->
-        <article class="bg-white rounded-lg shadow overflow-hidden p-4">
-          <div class="mockup-screen mb-3">
-            <div class="mockup-header"><span style="background:#ef4444"></span><span style="background:#facc15"></span><span style="background:#22c55e"></span></div>
-            <div class="mockup-body">
-              <img src="https://images.unsplash.com/photo-1573497161139-7c1e7e9a6945?q=80&w=800&auto=format&fit=crop" alt="Website Kantor Hukum">
-            </div>
+      <!-- Klinik Sehat -->
+      <article class="bg-white rounded-lg shadow overflow-hidden p-4">
+        <div class="mockup-screen mb-3">
+          <div class="mockup-header">
+            <span style="background:#ef4444"></span>
+            <span style="background:#facc15"></span>
+            <span style="background:#22c55e"></span>
           </div>
-          <h4 class="font-semibold text-lg">Kantor Hukum Prima</h4>
-          <p class="text-sm text-slate-500 mt-2">Situs hukum dengan profil pengacara, layanan hukum, dan testimoni klien.</p>
-        </article>
+          <div class="mockup-body">
+            <img src="https://images.unsplash.com/photo-1588776814546-3121d40b93e5?q=80&w=800&auto=format&fit=crop" alt="Website Klinik Sehat Parepare">
+          </div>
+        </div>
+        <h4 class="font-semibold text-lg">Klinik Sehat</h4>
+        <p class="text-sm text-slate-500 mt-2">Website profesional dengan profil dokter, jadwal praktek, dan formulir janji temu.</p>
+      </article>
 
-      </div>
+      <!-- Kantor Hukum Prima -->
+      <article class="bg-white rounded-lg shadow overflow-hidden p-4">
+        <div class="mockup-screen mb-3">
+          <div class="mockup-header">
+            <span style="background:#ef4444"></span>
+            <span style="background:#facc15"></span>
+            <span style="background:#22c55e"></span>
+          </div>
+          <div class="mockup-body">
+            <img src="https://images.unsplash.com/photo-1587825140708-dfaf72ae4b04?q=80&w=800&auto=format&fit=crop" alt="Website Kantor Hukum Prima">
+          </div>
+        </div>
+        <h4 class="font-semibold text-lg">Kantor Hukum Prima</h4>
+        <p class="text-sm text-slate-500 mt-2">Profil kantor hukum dengan deskripsi layanan, tim pengacara, dan testimoni klien.</p>
+      </article>
+
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Pricing -->
   <section id="pricing" class="py-12 bg-gradient-to-tr from-white to-slate-50">
@@ -218,3 +231,4 @@
   </footer>
 </body>
 </html>
+
